tests/ui/errors/snapshots/infer_const_pattern_not_case_eligible.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Pattern target is not a matchable value
   ╭─[main.lis:6:5]
 5 │   match day {
 6 │     lib.Today => "today",
   ·     ────┬────
   ·         ╰── a function cannot be a match pattern
 7 │     _ => "other",
   ╰────
  help: `lib.Today` is a function or method value. Const patterns match named constants or package-level values that the compiler can emit as a Go `case`, not callables · code: [infer.const_pattern_not_eligible]
