tests/ui/errors/snapshots/infer_const_requires_simple_expression.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `const` requires a simple expression
   ╭─[test.lis:2:15]
 1 │     
 2 │ ╭─▶ const VALUE = {
 3 │ │     let x = 10
 4 │ │     x + 20
 5 │ ├─▶ }
   · ╰──── expected literal or simple expression
   ╰────
  help: Use `let` for computed values · code: [infer.const_requires_simple_expression]
