tests/ui/errors/snapshots/infer_const_self_reference_cycle.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `const` init cycle
   ╭─[test.lis:2:7]
 1 │ 
 2 │ const SELF = SELF
   ·       ──┬─
   ·         ╰── self-reference
   ╰────
  help: `const` initializers cannot refer to themselves, either directly or transitively · code: [infer.const_cycle]
