tests/ui/errors/snapshots/infer_contains_rejects_noncomparable_struct_element.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid comparison
   ╭─[test.lis:7:16]
 6 │ fn test(a: Slice<Holder>, value: Holder) {
 7 │   let result = a.contains(value);
   ·                ┬
   ·                ╰── cannot be compared
 8 │ }
   ╰────
  help: `Slice<Holder>` cannot be compared because a struct containing non-comparable fields cannot be compared · code: [infer.not_equatable]
